--- a/index.html
+++ b/index.html
@@ -5,26 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./CSS/style.css">
   
   <title>Frontend Mentor | Profile card component</title>
 </head>
 
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  <div id="profile-card">
+    <div id="card-header"></div>
+    <div id="card-body">
+      <div id="name-age-container">
+        <h1 id="name">Victor Crest</h1><p id="age">26</p>
+      </div>
+      <p id="location">London</p>
+    </div>
+    <div id="card-footer">
+      <div id="followers-block" class="card-footer-block">
+        <p class="card-footer-em-text">80K</p>
+        <p class="card-footer-small-text">Followers</p>
+      </div>
+      <div id="likes-block" class="card-footer-block">
+        <p class="card-footer-em-text">803K</p>
+        <p class="card-footer-small-text">Likes</p>
+      </div>
+      <div id="photos-block" class="card-footer-block">
+        <p class="card-footer-em-text">1.4K</p>
+        <p class="card-footer-small-text">Photos</p>
+      </div>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/russellmclean117">Your Name Here</a>.
   </div>
 </body>
 </html>
