--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 
 <body>
   <div id="profile-card">
-    <div id="card-header"></div>
-    <div id="card-body">
+    <div id="card-header-container">
+      <img id="card-header" src="./images/bg-pattern-card.svg">
+    </div>
+    <div id="card-body-container">
+      <img id="profile-picture" src="./images/image-victor.jpg">
       <div id="name-age-container">
         <h1 id="name">Victor Crest</h1><p id="age">26</p>
       </div>
       <p id="location">London</p>
     </div>
-    <div id="card-footer">
+    <div id="card-footer-container">
       <div id="followers-block" class="card-footer-block">
         <p class="card-footer-em-text">80K</p>
         <p class="card-footer-small-text">Followers</p>
