--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <div id="profile-card">
-    <div id="card-header-container">
-      <img id="card-header" src="./images/bg-pattern-card.svg">
+  <div id="profile-card" class="card-corners">
+    <div id="card-header-container" class="card-top-corners">
+      <img id="card-header" class="card-top-corners" src="./images/bg-pattern-card.svg">
     </div>
     <div id="card-body-container">
       <img id="profile-picture" src="./images/image-victor.jpg">
@@ -22,7 +22,7 @@
       </div>
       <p id="location">London</p>
     </div>
-    <div id="card-footer-container">
+    <div id="card-footer-container" class="card-bottom-corners">
       <div id="followers-block" class="card-footer-block">
         <p class="card-footer-em-text">80K</p>
         <p class="card-footer-small-text">Followers</p>
