xlass grouping text based on color

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     <div id="card-body-container">
       <img id="profile-picture" src="./images/image-victor.jpg">
       <div id="name-age-container">
-        <h1 id="name">Victor Crest</h1><p id="age">26</p>
+        <h1 id="name" class="black-text">Victor Crest</h1><p id="age" class="grey-text">26</p>
       </div>
-      <p id="location">London</p>
+      <p id="location" class="grey-text">London</p>
     </div>
     <div id="card-footer-container" class="card-bottom-corners">
       <div id="followers-block" class="card-footer-block">
-        <p class="card-footer-em-text">80K</p>
-        <p class="card-footer-small-text">Followers</p>
+        <p class="card-footer-em-text black-text">80K</p>
+        <p class="card-footer-small-text grey-text">Followers</p>
       </div>
       <div id="likes-block" class="card-footer-block">
-        <p class="card-footer-em-text">803K</p>
-        <p class="card-footer-small-text">Likes</p>
+        <p class="card-footer-em-text black-text">803K</p>
+        <p class="card-footer-small-text grey-text">Likes</p>
       </div>
       <div id="photos-block" class="card-footer-block">
-        <p class="card-footer-em-text">1.4K</p>
-        <p class="card-footer-small-text">Photos</p>
+        <p class="card-footer-em-text black-text">1.4K</p>
+        <p class="card-footer-small-text grey-text">Photos</p>
       </div>
     </div>
   </div>
