fix: update readme

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/russellmclean117">Russell</a>.
+    Coded by <a href="https://github.com/russmc">Russell</a>.
   </div>
 </body>
 </html>
